Lab 6 Naive cookie-based login system

--- a/src/main/resources/AlbumList_ru.properties
+++ b/src/main/resources/AlbumList_ru.properties
@@ -5,3 +5,10 @@ album = Альбом
 rating = Рейтинг
 switchLang = Изменить язык на: 
 vote=Голосовать
+login=Войти
+logout=Выйти
+username=имя пользователя
+password=пароль
+submitLogin=войти
+incorrectLogin=Неверный логин или пароль!
+helloText=Добро пожаловать, 
